<?xml version="1.0"?>
<package format="2">
  <name>op3_webots_ros</name>
  <version>0.0.0</version>
  <description>The op3_webots_ros package</description>

  <author email="hs3927@nyu.edu">Jay Song</author>
  <maintainer email="hs3927@nyu.edu">Jay Song</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>robotis_controller_msgs</depend>
  
  <depend>webots_ros</depend>

  <export></export>
</package>
